<resources>
    <string name="app_name">Scopah</string>
    <string name="logo">Logo</string>
    <string name="application_name">Scopah</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="completed">Completed</string>
    <string name="past_games">Past Games</string>
    <string name="saved_games">Saved Games</string>
    <string name="players">Players</string>
    <string name="settings">Settings</string>
    <string name="napola">Napola</string>
    <string name="end">End</string>
    <string name="minimum_players">Need at least 2 players</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="save">Save</string>
    <string name="new_round">New Round</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="player_three">Player Three</string>
    <string name="player_four">Player Four</string>
    <string name="bonus">Bonus</string>
    <string name="who_has">Who has</string>
    <string name="coins">Coins</string>
    <string name="spades">Spades</string>
    <string name="cups">Cups</string>
    <string name="batons">Batons</string>
    <string name="more_coins">more coins?</string>
    <string name="seven_coins">the 7 of coins?</string>
    <string name="prime">the prime (the majority of sevens)?</string>
    <string name="more_cards">more cards?</string>
    <string name="napola_question">napola?</string>
    <string name="two_spades">the two of spades?</string>
    <string name="ten_coins">the 10 of coins?</string>
    <string name="eight_cups">the 8 of cups?</string>
    <string name="more_spades">more spades?</string>
    <string name="more_cups">more cups?</string>
    <string name="more_batons">more batons?</string>
    <string name="skip">Skip</string>
    <string name="napola_bounds">Napola is between 3 and 10</string>
    <string name="seven_of_coins">Seven of Coins</string>
    <string name="two_of_spades">Two of Spades</string>
    <string name="ten_of_coins">Ten of Coins</string>
    <string name="eight_of_cups">Eight of Cups</string>
    <string name="without_saving">Exit without saving?</string>
    <string name="start">Start</string>
    <string name="match_saved">Match saved</string>
    <string name="match_concluded">Match concluded</string>
    <string name="coins_from_1_to">from 1 to:</string>
    <string name="main_seed">Main Seed</string>
</resources>