<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Main Seed"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_coins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/coins" />

                <RadioButton
                    android:id="@+id/radio_spades"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spades" />

                <RadioButton
                    android:id="@+id/radio_cups"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cups" />

                <RadioButton
                    android:id="@+id/radio_batons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/batons" />
            </RadioGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_napola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/napola"
                android:textSize="18dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_seven_coins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven_of_coins"
                android:textSize="18dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_two_spades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_of_spades"
                android:textSize="18dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_ten_coins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ten_of_coins"
                android:textSize="18dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_eight_cups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight_of_cups"
                android:textSize="18dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>