<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:textSize="36dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="50dp"
            android:text="@string/application_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48dp" />

        <Button
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/play"
            android:textColor="#000000"
            android:textSize="24dp" />

        <Button
            android:id="@+id/button_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/resume"
            android:textColor="#000000"
            android:textSize="24dp" />

        <Button
            android:id="@+id/button_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/completed"
            android:textColor="#000000"
            android:textSize="24dp" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="24dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>