<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WizardActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp"
        tools:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question question question question question question question question question question question question question"
                android:textSize="32dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/button_one"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:singleLine="true"
                android:text="@string/player_one"
                android:textAlignment="center"
                android:textSize="32dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/button_two"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:singleLine="true"
                android:text="@string/player_two"
                android:textAlignment="center"
                android:textSize="32dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/button_three"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:singleLine="true"
                android:text="@string/player_three"
                android:textAlignment="center"
                android:textSize="32dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            tools:visibility="visible">

            <Button
                android:id="@+id/button_four"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:singleLine="true"
                android:text="@string/player_four"
                android:textAlignment="center"
                android:textSize="32dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>