<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="4"
                android:background="#F44336"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/player_one"
                android:textAlignment="center"
                android:textSize="32dp" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="2"
                android:scaleY="2"
                android:translationX="50dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="4"
                android:background="#2196F3"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/player_two"
                android:textAlignment="center"
                android:textSize="32dp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="2"
                android:scaleY="2"
                android:translationX="50dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="4"
                android:background="#4CAF50"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/player_three"
                android:textAlignment="center"
                android:textSize="32dp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="2"
                android:scaleY="2"
                android:translationX="50dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/text4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="4"
                android:background="#FFEB3B"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/player_four"
                android:textAlignment="center"
                android:textSize="32dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleX="2"
                android:scaleY="2"
                android:translationX="50dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="0dp">

            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/start"
                android:textSize="24dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>